# EX_MiracleVision

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLEANUP_REPORT.md  CMAKE_UPGRADE_SUMMARY.md  CMakeLists.txt  COMPILATION_STATUS.md  QUICK_START.md  QUICK_TEST_REPROJECTION.md  README.md  fix_vcpkg_network.sh  monitor_vcpkg.sh  test_cmake_config.sh  upgrade_gcc.sh  vcpkg.json  vcpkg.json.backup
base/: CMakeLists.txt  MiracleVision.cpp  MiracleVision.hpp
cmake/: CompilerOptions.cmake  CompilerOptions.cmake.backup  Dependencies.cmake  ThirdParty.cmake
configs/: vision.yaml
devices/: CMakeLists.txt  command.hpp
devices/camera/: mv_video_capture.cpp  mv_video_capture.hpp
devices/serial/: uart_serial.cpp  uart_serial.hpp
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CHECKLIST.md  DEADLOCK_FIX.md  DEBUG_SESSIONS.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  GIMBAL_YAW_ANALYSIS.md  GIMBAL_YAW_REPROJECTION_FIX.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  ROADMAP.md  VCPKG_ISSUES_SUMMARY.md  (+3 more)
module/: CMakeLists.txt
module/angle_solve/: abstract_pnp.hpp  angle_solve.cpp  angle_solve.hpp  basic_pnp.cpp  basic_pnp.hpp
module/armor/: DNN_armor.cpp  DNN_armor.hpp  basic_armor.cpp  basic_armor.hpp  fan_armor.cpp  fan_armor.hpp
module/buff/: abstract_blade.hpp  abstract_center_r.hpp  abstract_object.hpp  abstract_target.hpp  basic_buff.cpp  basic_buff.hpp  new_buff.cpp  new_buff.hpp
module/camera/: camera_calibration.cpp  camera_calibration.hpp
module/filter/: abstract_kalman.hpp  basic_kalman.cpp  basic_kalman.hpp
module/foxglove_publisher/: CMakeLists.txt  foxglove_publisher.cpp  foxglove_publisher.hpp
module/ml/: onnx_inferring.cpp  onnx_inferring.hpp
module/predictor/: adapter.hpp  armor.cpp  armor.hpp  extended_kalman_filter.cpp  extended_kalman_filter.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
module/roi/: abstract_roi.hpp  basic_roi.cpp  basic_roi.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/config/: auto_aim.yaml  vision.yaml
src/config/debug/: debug_override.yaml
src/config/profiles/: README.md  engineer.yaml  hero.yaml  infantry.yaml  sentry.yaml
src/core/: CMakeLists.txt  config.hpp  logger.cpp  logger.hpp
src/factory/: CMakeLists.txt  factory.hpp
src/fsm/: CMakeLists.txt  state_machine.hpp  vision_fsm.cpp  vision_fsm.hpp
src/hal/: CMakeLists.txt
src/hal/camera/: CMakeLists.txt  i_camera.hpp  mindvision_camera.cpp  mindvision_camera.hpp  opencv_camera.cpp  opencv_camera.hpp  sim_camera.cpp  sim_camera.hpp
src/hal/serial/: CMakeLists.txt  i_serial.hpp  rm_protocol.hpp  sim_serial.cpp  sim_serial.hpp  uart_serial.cpp  uart_serial.hpp
src/interfaces/: CMakeLists.txt  i_detector.hpp  i_predictor.hpp  i_shooter.hpp  i_solver.hpp  i_voter.hpp  types.hpp
src/modules/: CMakeLists.txt
src/modules/armor_detector/: basic_armor_detector.cpp  basic_armor_detector.hpp  roi_manager.hpp
src/modules/cooldown_voter/: cooldown_voter.cpp  cooldown_voter.hpp
src/modules/ekf_predictor/: ekf_predictor.cpp  ekf_predictor.hpp
src/modules/ekf_predictor/detail/: ekf_track_target.cpp  ekf_track_target.hpp  ekf_tracker.cpp  ekf_tracker.hpp  trajectory_solver.cpp  trajectory_solver.hpp
src/modules/mpc_voter/: mpc_voter.cpp  mpc_voter.hpp
src/modules/mpc_voter/detail/: mpc_planner.cpp  mpc_planner.hpp
src/modules/pnp_solver/: pnp_solver.cpp  pnp_solver.hpp
src/modules/rm_shooter/: rm_shooter.cpp  rm_shooter.hpp
src/modules/simple_predictor/: simple_predictor.cpp  simple_predictor.hpp
src/modules/simple_voter/: simple_voter.cpp  simple_voter.hpp
src/pipeline/: CMakeLists.txt  capture_node.cpp  capture_node.hpp  channel.hpp  detect_node.cpp  detect_node.hpp  node.hpp  packet.hpp  pipeline.hpp  predict_node.cpp  predict_node.hpp  serial_node.cpp  serial_node.hpp  shared_state.hpp
src/test/: CMakeLists.txt  armor_detector_contract_test.cpp  foxglove_vision_test.cpp  minimum_real_vision.cpp  pnp_solver_test.cpp  predict_voter_test.cpp  real_debug_vision.cpp  smoke_test.cpp  video_pipeline_test.cpp
src/test/ekf/: ekf_predictor_init_config_test.cpp  ekf_track_target_update_test.cpp  ekf_tracker_set_target_test.cpp  ekf_tracker_state_machine_test.cpp  trajectory_solver_choose_aim_point_test.cpp  trajectory_solver_solve_iter_test.cpp
src/test/serial/: sim_serial_test.cpp
src/tool/: CMakeLists.txt  debug_session.cpp  debug_session.hpp  metrics_tracker.hpp  param_tuner.cpp  view_renderer.cpp
src/tool/calibration/: CMakeLists.txt  README.md  calibrate_camera.cpp  calibrate_robotworld_handeye.cpp  calibration_io.cpp  calibration_io.hpp  capture_calib_data.cpp  validate_calibration.cpp
src/tool/debug/: CMakeLists.txt  armor_param_manager.cpp  armor_param_manager.hpp  debug_session.cpp  debug_session.hpp  light_vis_painter.cpp  light_vis_painter.hpp  param_tuner.cpp  param_tuner.hpp  pnp_param_manager.cpp  pnp_param_manager.hpp  predict_annotator.hpp  predict_param_manager.cpp  predict_param_manager.hpp  shooter_param_manager.cpp  shooter_param_manager.hpp  terminal_hud.hpp  view_renderer.cpp  view_renderer.hpp
src/tool/ekf/: CMakeLists.txt  extended_kalman_filter.cpp  extended_kalman_filter.hpp
src/tool/foxglove/: CMakeLists.txt  foxglove_sink.cpp  foxglove_sink.hpp
src/tool/foxglove/detail/: detection_publisher.cpp  detection_publisher.hpp  gimbal_publisher.cpp  gimbal_publisher.hpp  hud_status_publisher.cpp  hud_status_publisher.hpp  image_publisher.cpp  image_publisher.hpp  pnp_visualizer.cpp  pnp_visualizer.hpp  serial_visualizer.cpp  serial_visualizer.hpp  server_builder.hpp  tf_publisher.cpp  tf_publisher.hpp  thread_monitor.cpp  thread_monitor.hpp  tracking_visualizer.cpp  tracking_visualizer.hpp  traditional_vision_debug_publisher.cpp  traditional_vision_debug_publisher.hpp  utils.hpp
test/: CMakeLists.txt  foxglove_camera_sdk.cpp  minimum_vision.cpp
utils/: CMakeLists.txt  base64.cpp  debug_tools.hpp  fps.hpp  img_tools.cpp  img_tools.hpp  logger.cpp  logger.hpp  math_tools.cpp  math_tools.hpp  plotter.cpp  plotter.hpp  reset_mv_camera.hpp  thread_safe_queue.hpp
(+91 files in other folders)
